2007-04-03  Murray Cumming  <murrayc@murrayc.com>

	* libgda/: Some of the headers mistakenly mentioned GPL instead of LGPL. 
	LGPL is obviously intended, as specified in the README, so I made these consistent.

2007-03-30  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-server-provider.c:
	* libgda/gda-server-provider-private.h: removed the list of connections
	using the specified GdaServerProvider object as it was useless and the 
	self-unreferencing of the providers if there was no opened connection left
	lead to memory corruption
	* libgda/gda-connection.c: added more assertions tests to avoid crashes
	* libgda/gda-quark-list.c: don't pass g_free as data pointer if it's not used
	* tests/providers/prov-test-util.c: make it possible to close and re-open a
	connection after some tests because tests are run in sub-processes
	* tests/providers/*: now test TYPES schema
	* tests/data-models/: new tests for GdaDataModel implementations (only
	a start at the moment)

2007-03-29  Vivien Malerba <malerba@gnome-db.org>

	* tests/providers/*: improved providers tests (now tests DB creation, SQL execution
	to create tables, tables' fields retreival, DB destruction)
	* libgda/gda-data-model-import.c: corrected XML files import in situations when the 
	XML file was not indented
	* libgda/gda-parameter-list.c: API doc improvements

2007-03-28  Vivien Malerba <malerba@gnome-db.org>

	* tests/queries/*: moved all files in tests/ to tests/queries
	* tests/providers/*: new providers' tests
	* configure.in: adapted to the new tests/ directory layout
	* doc/C/server-operation.xml: improved doc.

2007-03-27  Vivien Malerba <malerba@gnome-db.org>

	* libsql/lexer.l:
	* libgda/sql-delimiter/lexer.l: return to the INITIAL state for the next call
	if there has been an EOF while in a string or textual expression
	* providers/sqlite/gda-sqlite-provider.c: remove comment, see
	http://www.mail-archive.com/sqlite-users%40sqlite.org/msg23418.html
