@@ -1,3 +1,6 @@
+See COPYING.LIB for the main libgda license: LGPL.
+Only the executable tools are under the GPL.
+
 		    GNU GENERAL PUBLIC LICENSE
 		       Version 2, June 1991
 
